Revision history for MooseX-Daemonize

0.02 ???
	- Switch to File::Pid
    - Add the GetOpt prereq
	- Adjust the kill timings
	- Added THANKS to pod

0.0.1  Wed May 16 11:46:56 2007
       Initial release.
