@@ -1,6 +1,7 @@
 #!perl
-
-if (!require Test::Perl::Critic) {
+use Test::More;
+eval "require Test::Perl::Critic";
+if (! $@) {
     Test::More::plan(
         skip_all => "Test::Perl::Critic required for testing PBP compliance"
     );
